[tool.poetry]
name = "simulator"
version = "0.1.0"
description = "Layer-Aware maintenance policy for edge computing infrastructures"
authors = ["Paulo Severo <paulo.severo@edu.pucrs.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
edge-sim-py = {git = "https://github.com/EdgeSimPy/EdgeSimPy.git", rev = "v1.1.0"}
pymoo = "0.5.0"
Cython = "^0.29.32"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
ipykernel = "^6.16.0"
pylint = "2.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 135
